# evo2-slurm

./: .gitignore  .gitmodules  README.md  generate_embedding.sh  generate_embedding_matrix.sh  local.sh  mount_erda.sh  pyproject.toml  setup_env.sh  unmount_erda.sh
src/evo2_slurm/: embedding.py
