[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evo2-slurm"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = ["pandas", "click>=8.0.0", "tqdm", "bio"]

[project.scripts]
# Script to generate embeddings
generate-embedding = "evo2_slurm.embedding:generate"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["ruff>=0.1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/evo2_slurm"]
